# geotransform

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: CMakeLists.txt  geotransform_advanced.cxx  geotransform_simple.cxx
include/geotransform/: geotransform.hpp  geotransform_operations.hpp
src/: geotransform.hpp  geotransform_operations.hpp
tests/: CMakeLists.txt  test_geotransform.cxx  test_geotransform_utilities.cxx
